cd/overlays/production/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: developer-portal
  labels:
    app.kubernetes.io/name: developer-portal
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gke-gateway-prd
      sectionName: https
  hostnames:
    - dev.zilliqa.com
  rules:
    - backendRefs:
        - name: developer-portal
          port: 80
